--- a/config/database.yml
+++ b/config/database.yml
@@ -21,3 +21,11 @@ test:
   pool: 5
   username: the-crab
   password:
+
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: bats_development
+#   pool: 5
+#   username: the-crab
+#   password:
